load("@rules_python//python:py_library.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "opencc",
    srcs = [
        "__init__.py",
        "_opencc_pure.py",
    ],
    data = [
        "//data/config",
        "//data/dictionary:text_dictionaries",
    ],
    imports = [".."],
)
