load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:py_test.bzl", "py_test")

py_test(
    name = "test_opencc",
    size = "small",
    srcs = ["test_opencc.py"],
    data = [
        "//test/testcases",
    ],
    imports = [".."],
    deps = [
        "//python/opencc",
        requirement("pytest"),
        requirement("pygments"),
        requirement("exceptiongroup"),
    ],
)

py_test(
    name = "test_cli",
    size = "small",
    srcs = ["test_cli.py"],
    imports = [".."],
    deps = [
        "//python/opencc",
        requirement("pytest"),
        requirement("pygments"),
        requirement("exceptiongroup"),
    ],
)
